# GPTDiscord

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  auto_restarter.py  bot.py  conversation_drawing_ability_extraction_snippet.txt  conversation_drawing_ability_snippet.txt  conversation_starter_pretext.txt  conversation_starter_pretext_minimal.txt  conversation_starter_pretext_vision.txt  docker-compose.yml  gpt3discord.py  image_optimizer_pretext.txt  language_detection_pretext.txt  main.py  pyproject.toml  requirements.txt  requirements_base.txt  requirements_full.txt  sample.env
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoblack_push.yml  black-and-deploy.yml  build-and-publish-docker.yml  build.yml  codeql.yml  docker_upload.yml  main.yml  pypi_upload.yml
cogs/: activity_service_cog.py  code_interpreter_service_cog.py  commands.py  draw_image_generation.py  gpt_3_commands_and_converser.py  image_prompt_optimizer.py  image_service_cog.py  index_service_cog.py  moderations_service_cog.py  prompt_optimizer_cog.py  search_service_cog.py  text_service_cog.py  transcription_service_cog.py  translation_service_cog.py
detailed_guides/: AI-MODERATION.md  AI-SEARCH.md  AZURE-APP-SERVICE.md  CODE-INTERPRETER.md  CUSTOM-INDEXES.md  DROPLET-GUIDE.md  DROPLET-Guide.md  How to host on Azure app service.md  INSTALLATION.md  INTERNET-CONNECTED-CHAT.md  LANGUAGE-DETECTION.md  MULTI-MODALITY.md  OPENAI-GUIDE.md  OPENAI-Guide.md  OTHER-MINOR-FEATURES.md  PERMANENT-MEMORY.md  PERMISSIONS.md  TRANSLATIONS.md  USER-INPUT-KEYS.md  azure-app-service  azure-app-service.md
models/: autocomplete_model.py  check_model.py  deepl_model.py  deletion_service.py  embed_statics_model.py  env_service_model.py  image_understanding_model.py  index_model.py  message_model.py  moderations_service_model.py  openai_model.py  perspective_model.py  pinecone_service_model.py  replicate_model.py  search_model.py  usage_service_model.py  user_model.py
openers/: composer.txt  debater.txt  english_translator.json  english_translator.txt  essay_writer.txt  javascript_console.txt  life_coach.txt  midjourney_prompt_engineer.txt  motivational_coach.txt  motivational_speaker.txt  novelist.txt  personal_trainer.txt  position_interviewer.txt  python_interpreter.txt  storyteller.txt  tech_reviewer.txt  text_based_adventure_game.txt  travel_guide.txt  ui_ux_developer.txt
services/: deletion_service.py  environment_service.py  health_service.py  image_service.py  message_queue_service.py  moderations_service.py  pickle_service.py  pinecone_service.py  qdrant_service.py  sharegpt_service.py  text_service.py  usage_service.py
tests/: test_requests.py
updates-implementations-features/: AI-Assisted-Google Search.md  Custom-Indexes-Knowledgebase.md  Permanent-Memory-and-Conversations.md  Translations-with-DeepL.md  User-Input-API-Keys.md  other-features.md  updates.md
utils/: __init__.py  safe_ctx_respond.py
