[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt3discord"
description = "A Chat GPT Discord bot"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Kaveen Kumarasinghe", email = "contact@kaveenk.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "Pillow",
  "py-cord",
  "python-dotenv",
  "requests",
  "transformers",
  "pycord-multicog",
  "aiofiles",
  "pinecone-client",
  "sqlitedict",
  "backoff",
  "flask",
  "flask",
  "beautifulsoup4",
  "gpt-index",
  "PyPDF2",
  "youtube_transcript_api",
  "sentencepiece",
  "protobuf",
  "python-pptx",
]

dynamic = ["version"]


[project.scripts]
gpt3discord = "gpt3discord:init"

[project.urls]
Documentation = "https://github.com/Kav-K/GPT3Discord/#readme"
Issues = "https://github.com/Kav-K/GPT3Discord/issues"
Source = "https://github.com/Kav-K/GPT3Discord"

[project.optional-dependencies]
full = [
  "torch==1.9.1",
  "torchvision==1.10.1",
  "tokenizers==0.10.3",
  "tqdm==4.64.1",
  "numpy==1.24.2",
  "scipy==1.10.1",
  "nltk==3.8.1",
  "huggingface-hub==0.12.1",
  "more-itertools==9.0.0",
  "ffmpeg-python==0.2.0",
  "sentence-transformers==2.2.2",
  "openai-whisper",
]

[tool.hatch.version]
path = "gpt3discord.py"

[tool.hatch.build]
include = [
  "cogs/*.py",
  "models/*.py",
  "services/*.py",
  "gpt3discord.py",
]

#[tool.hatch.build.targets.sdist]
#packages = ["cogs", "gpt3discord.py", "models", "services"]

#[tool.hatch.build.targets.wheel]
#packages = ["cogs", "gpt3discord.py", "models", "services"]

[[tool.hatch.envs.test.matrix]]
python = ["39"]
