[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt3discord"
description = "A Chat GPT Discord bot"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Kaveen Kumarasinghe", email = "contact@kaveenk.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
"Pillow==9.3.0",
"openai==0.27.0",
"pytube==12.1.2",
"py-cord==2.3.2",
"python-dotenv==0.21.0",
"requests==2.28.1",
"transformers==4.25.1",
"pycord-multicog==1.0.2",
"aiofiles==22.1.0",
"pinecone-client==2.1.0",
"sqlitedict==2.1.0",
"backoff==2.2.1",
"flask==2.2.3",
"beautifulsoup4==4.11.1",
"gpt-index==0.4.17",
"PyPDF2==3.0.1",
"youtube_transcript_api==0.5.0",
"sentencepiece==0.1.97",
"protobuf==3.20.2",
"python-pptx==0.6.21",
"langchain==0.0.93",
"unidecode==1.3.6"
]

dynamic = ["version"]


[project.scripts]
gpt3discord = "gpt3discord:init"

[project.urls]
Documentation = "https://github.com/Kav-K/GPT3Discord/#readme"
Issues = "https://github.com/Kav-K/GPT3Discord/issues"
Source = "https://github.com/Kav-K/GPT3Discord"

[project.optional-dependencies]
full = [
  "torch==1.9.1",
  "torchvision==1.10.1",
  "tokenizers==0.10.3",
  "tqdm==4.64.1",
  "numpy==1.24.2",
  "scipy==1.10.1",
  "nltk==3.8.1",
  "huggingface-hub==0.12.1",
  "more-itertools==9.0.0",
  "ffmpeg-python==0.2.0",
  "sentence-transformers==2.2.2",
  "openai-whisper",
]

[tool.hatch.version]
path = "gpt3discord.py"

[tool.hatch.build]
include = [
  "cogs/*.py",
  "models/*.py",
  "services/*.py",
  "gpt3discord.py",
]

#[tool.hatch.build.targets.sdist]
#packages = ["cogs", "gpt3discord.py", "models", "services"]

#[tool.hatch.build.targets.wheel]
#packages = ["cogs", "gpt3discord.py", "models", "services"]

[[tool.hatch.envs.test.matrix]]
python = ["39"]
